# rust-webapp-template

./: Cargo.toml  LICENSE  cargo-generate.toml  test-values.toml
.github/workflows/: test-template.yml
core/: Cargo.toml
core/src/: commands.rs  lib.rs  repos.rs  services.rs  usecases.rs
core/src/models/: id.rs  user.rs
core/src/repos/: manager.rs
core/src/services/: manager.rs  user_service.rs
core/src/services/user_service/: create.rs
core/src/usecases/: manager.rs  user_usecase.rs
core/src/usecases/user_usecase/: create.rs
domain/: Cargo.toml
domain/src/: models.rs  rdb.rs  repos.rs
domain/src/models/: hashed_password.rs  user.rs
domain/src/repos/: user_repository.rs
http-app/: Cargo.toml
http-app/src/: main.rs
http-core/: Cargo.toml
http-core/src/: error.rs  lib.rs  responses.rs  routes.rs  state.rs  test_helper.rs
http-core/src/responses/: user_response.rs
http-core/src/routes/: user_routes.rs
infra/: Cargo.toml  schema.sql
infra/src/: lib.rs  rdb.rs  services.rs  usecase.rs  usecases.rs
infra/src/repos/: user_repository.rs
infra/src/repos/user_repository/: create.rs  find.rs  find_by_name.rs
infra/src/rows/: mod.rs  user.rs
infra/src/services/: manager.rs  user_service.rs
infra/src/usecase/: manager.rs  user.rs  user_usecase.rs
infra/src/usecases/: manager.rs  user_usecase.rs
scripts/: test-template.sh
usecase/: Cargo.toml
usecase/src/: lib.rs  manager.rs  test_helper.rs  user.rs  user_usecase.rs
usecase/src/user/: find_user.rs  find_user_by_name.rs  user_registration.rs
usecase/src/user/user_registration/: tests.rs
usecase/src/user_usecase/: create.rs
