[workspace]
members = ["core", "usecase", "infra", "http-core", "http-app"]
resolver = "2"

[workspace.dependencies]
kubetsu = { version = "0.7" }
kubetsu-serde = { version = "0.1" }
kubetsu-fake = { version = "0.1" }
kubetsu-sqlx= { version = "0.1", features = ["mysql"]}
async-session = "3"
axum = { version = "0.8", features = ["tracing"] }
axum-extra = { version = "0.12", features = ["cookie-signed", "cookie-key-expansion", "typed-header"] }
async-trait = "0.1"
base64 = "0.22"
bcrypt = "0.19"
chrono = { version = "0.4", features = ["serde"] }
hyper = "1.0"
listenfd = "1"
num-traits = "0.2"
serde = { version = "1", features = ["derive"] }
sha2 = "0.11"
thiserror = "2"
time = "0.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "fs"] }
tokio-util = { version = "0.7", features = ["io"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version =  "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
fake = { version = "5", features=["derive"] }
mockall = "0.14"
qbey = { version = "0.3" }
sqlx = { version = "0.8", features = ["mysql", "runtime-tokio"] }
ctor = "0.10"
testcontainers = "0.27"
testcontainers-modules = { version = "0.15", features = ["mysql"] }
