[package]
name = "{{ project-name }}-core"
version = "0.1.0"
edition = "2024"
publish = false

[features]
default = []
test = ["mockall"]

[dependencies]
async-trait.workspace = true
bcrypt.workspace = true
chrono.workspace = true
kubetsu.workspace = true
kubetsu-fake.workspace = true
kubetsu-serde.workspace = true
kubetsu-sqlx.workspace = true
sqlx.workspace = true
fake.workspace = true
mockall = { version = "0.14", optional = true }
serde.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
tracing = "0.1"
