[package]
name = "{{ project-name }}-core"
version = "0.1.0"
edition = "2024"
publish = false

[features]
default = []
test = ["mockall"]

[dependencies]
async-trait.workspace = true
bcrypt.workspace = true
kubetsu.workspace = true
kubetsu-fake.workspace = true
kubetsu-serde.workspace = true
kubetsu-sqlx.workspace = true
fake.workspace = true
mockall = { version = "0.14", optional = true }
thiserror.workspace = true
