[package]
name = "{{ project-name }}-http-app"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
{{ project-name }}-domain = { path = "../domain" }
{{ project-name }}-http-core = { path = "../http-core" }
{{ project-name }}-infra= { path = "../infra" }

axum-extra.workspace = true
axum.workspace = true
listenfd.workspace = true
sqlx.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing-subscriber.workspace = true
