[package]
name = "{{ project-name }}-http-core"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
{{ project-name }}-core = { path = "../core" }
{{ project-name }}-usecase = { path = "../usecase" }

async-session.workspace = true
axum-extra.workspace = true
axum.workspace = true
bcrypt.workspace = true
chrono.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
async-trait.workspace = true
