[package]
name = "{{ project-name }}-usecase"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
{{ project-name }}-core = { path = "../core" }

async-trait.workspace = true
thiserror.workspace = true

[dev-dependencies]
{{ project-name }}-core = { path = "../core", features = ["test"] }
fake.workspace = true
tokio.workspace = true
