[package]
name = "{{ project-name }}-usecase"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
{{ project-name }}-domain = { path = "../domain" }

async-trait.workspace = true
fake.workspace = true
thiserror.workspace = true

[dev-dependencies]
{{ project-name }}-domain = { path = "../domain", features = ["test"] }
tokio.workspace = true
